# codeReviewRepo

./: README.md
DRONE/: Readme.md  helperFile.txt  setupInstallation.sh
MLInternship/: Module 2- Plotting in Financial Markets.ipynb  Module 3 - Regression - Beta Calculation.ipynb  Module 4 - Algo Trading using Classification.ipynb  Module 5 - Modern Portfolio Theory.ipynb  Module 6 - Clustering for Diverse portfolio analysis.ipynb
PolarCodecNR/: CMakeLists.txt  README.md
PolarCodecNR/src/: pc_crc_decoder.c  pc_crc_encoder.c  pc_encoder.c  pc_interleaver.c  pc_pc_decoder.c  pc_pc_encoder.c  pc_rate_match.c  pc_utils.c
QPDESolver/: Readme.md  heat_equation.py  laplace_equation.py  poisson_equation.py  quantum_solver.py  quantum_variational_solver.py  schrodinger_equation.py  wave_equation.py
QiskitIndiaChallenge/: W1Day2Q1.ipynb  W1Day2Q2.ipynb  W1Day3Q1.ipynb  W1Day3Q2.ipynb  W1Day4Q1.ipynb  W1Day4Q2.ipynb  weekend_exercise.ipynb
